Adapt for Java 8 (Pi install)